GNOME Bugzilla – Bug 701891
New account dialog title is incorrect
Last modified: 2013-06-14 08:25:56 UTC
Created attachment 246347 [details] [review] Fix new account dialog for title conforming to HIG. New account dialog title currently reads "Adding new account". This must read "Add new account" according to GNOME HIG.
Merged! Thanks for the patch.