Fix new account dialog for title conforming to HIG

Changed new account dialog title from "Adding new account" to
"Add new account" compliant with GNOME HIG.

https://bugzilla.gnome.org/show_bug.cgi?id=701891